[package]
name = "ic-tunnel"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>",  "j0nl1 <jonlitech@gmail.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-tunnel = { version = "0.1.0", path = "../../packages/cosmwasm-tunnel"}
cosmwasm-std = { version = "1.0.0", features = ["iterator", "ibc3"] }
cosmwasm-schema = { version = "1.1.0" }
cw-storage-plus = { version = "0.15.1" }
cw-utils = { version = "0.15.1" }
thiserror = { version = "1.0.23" }

[dev-dependencies]
